--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,12 +21,23 @@
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
         <item name="android:layoutDirection">ltr</item>
 
-
         <!-- Text Colors -->
         <item name="prefixTextColor">@color/appGrey</item>
         <item name="hintTextColor">@color/appGrey</item>
         <item name="appGreyDarkTextColor">@color/appDarkGrey</item>
         <item name="appWhiteColor">@color/appWhite</item>
         <item name="appGreyLightColor">@color/appGrey</item>
+
+        <!-- Start new activity animation slide in and slide out  -->
+        <item name="android:windowAnimationStyle">@style/appCustomActivityAnimation</item>
+
+    </style>
+
+    <style name="appCustomActivityAnimation" parent="@android:style/Animation.Activity">
+        <!-- specify enter and exit transitions -->
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
     </style>
 </resources>
