--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="app_text_size_c4">12sp</dimen>
     <dimen name="app_text_size_c5">13sp</dimen>
     <dimen name="app_text_size_c6">14sp</dimen>
+    <dimen name="app_text_size_c7">15sp</dimen>
 
 
     <!-- MARGIN -->
