--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ChannelApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ChannelApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/appPrimary</item>
         <item name="colorPrimaryVariant">@color/appPrimary</item>
         <item name="colorOnPrimary">@color/appPrimary</item>
         <item name="colorAccent">@color/appGreyLight</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/appPrimary</item>
-        <item name="colorSecondaryVariant">@color/appPrimary</item>
-        <item name="colorOnSecondary">@color/appPrimary</item>
+        <item name="colorSecondary">@color/appPrimaryTwo</item>
+        <item name="colorSecondaryVariant">@color/appPrimaryTwo</item>
+        <item name="colorOnSecondary">@color/appPrimaryTwo</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
