--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.task.channelapp.utils.uikit.toolbarview.ToolBarView
+        android:id="@+id/tbView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:paddingStart="@dimen/app_margin_medium"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tbBottomLineVisibility="true"
+        app:tbEndIconVisibility="false"
+        app:tbStartIconVisibility="false"
+        app:tbTitleText="@string/screen_main_display_text_tb_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
