--- a/app/src/main/res/layout/layout_item_episode.xml
+++ b/app/src/main/res/layout/layout_item_episode.xml
@@ -36,7 +36,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1px"
+        android:layout_height="1dp"
         android:layout_marginHorizontal="@dimen/app_margin_medium"
         android:layout_marginTop="@dimen/app_margin_xl"
         android:background="@color/appGreyLight"
